--- a/css/challenge.css
+++ b/css/challenge.css
@@ -20,15 +20,13 @@ width: auto;
 
 button{
   font-size: 2rem;
-  height: max-content;
-  width: max-content;
-  text-align: center;
+  height: min-content;
+  width: min-content;
   display: block;
   background-color: orange;
   color:white;
   font-weight: bold;
   align-self: flex-end;
-  margin-bottom: -1em;
 
 }
 #buttonPrevious{
@@ -48,6 +46,11 @@ button{
   position: absolute;
     right: 1em;
 }
+.details{
+  position: relative;
+  left: -25%;
+  bottom: -1.5rem;
+}
 .box{
   display: inline-flex;
   border: solid #CFCFCF;
@@ -65,7 +68,7 @@ button{
   text-align: left;
 }
 .corpo{
-  text-align: justify;
+  text-align: center;
 
 }
 
