--- a/css/challenge.css
+++ b/css/challenge.css
@@ -4,7 +4,6 @@ body{
   height: auto;
   width: auto;
 }
-
 h1{
 color: #363636;
 border-bottom: solid orange;
@@ -20,7 +19,9 @@ width: auto;
 
 h3{
   font-style: normal;
-  
+  display: inline-block;
+  margin-bottom: auto;
+  margin-top: auto;
 }
 button{
   font-size: 2rem;
@@ -31,7 +32,54 @@ button{
   color:white;
   font-weight: bold;
   align-self: flex-end;
+}
+img{
+  display:  grid ;
+max-width: 50%;
+max-height: 20%;
+height: 15em;
+width:  inherit;
+opacity: 0.7;
+}
 
+.details{
+  position: relative;
+  left: -25%;
+  bottom: -1.5rem;
+}
+.box{
+  display: inline-flex;
+  border: solid #CFCFCF;
+  height:auto;
+  min-height: 30em;
+  width:31%;
+  margin-right: 1rem;
+  background-color: #E8E8E8;
+  margin-bottom: 2rem;
+  font-style: oblique;
+  font-family: lato;
+  font-size: 1.2em;
+
+}
+.comics{
+  display: inline-block;
+}
+.boxContent{
+  border: solid #CFCFCF;
+  width: 70%;
+  height: 60%;
+  text-align: left;
+  min-width: 500px;
+  min-height: 500px;
+  position: relative;
+}
+.corpo{
+  text-align: center;
+
+}
+
+.some{
+  display: none;
 }
 #buttonPrevious{
   height: auto;
@@ -49,37 +97,4 @@ button{
   border-radius: 10px;
   position: absolute;
     right: 1em;
-}
-.details{
-  position: relative;
-  left: -25%;
-  bottom: -1.5rem;
-}
-.box{
-  display: inline-flex;
-  border: solid #CFCFCF;
-  height:auto;
-  min-height: 20em;
-  width:31%;
-  margin-right: 1rem;
-  background-color: #E8E8E8;
-  margin-bottom: 2rem;
-
-}
-.comics{
-  display: inline-block;
-}
-.boxContent{
-  border: solid #CFCFCF;
-  width: 70%;
-  height: 60%;
-  text-align: left;
-}
-.corpo{
-  text-align: center;
-
-}
-
-.some{
-  display: none;
 }
